# colap

./: .gitignore  Cargo.toml  README.md  build.rs
scripts/: gh_create_pr.sh
src/: cola.rs  cola_actions.rs  config_model.rs  generator.rs  lib.rs  main.rs  model_builder.rs  source_location.rs
src/generator/: generator_impl.rs  mod.rs
src/generator/templates/: api_struct.hbs  cargo_toml.hbs  entity_struct.hbs  file_header.hbs  integration_test.hbs  plural_struct.hbs  readme.hbs  singular_struct.hbs
src/grammar/: cola.rustemo  mod.rs
src/model/: config_model.rs  mod.rs  model_builder.rs  source_location.rs
src/parser/: mod.rs
src/templates/: api_struct.hbs  integration_test.hbs  plural_struct.hbs  readme.hbs  singular_struct.hbs
tests/: model_builder.rs  parser.rs
tests/data/: test_correct.md  test_genite.md  test_minimal.md  test_minimal_blockbody.md  test_nested.md  test_nested_oneline.md  test_no_indent.md  test_real_syntax.md  test_simple.md  test_simple_cola.md
