[package]
name = "colap"
version = "0.1.0"
edition = "2021"

[dependencies]
rustemo = "0.7.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11.3"
heck = "0.5.0"
handlebars = "6.3.2"
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
rustemo-compiler = "0.7.1"
