[package]
name = "colap"
version = "0.1.0"
authors = ["Hans Van Wesenbeeck <hvw@aivolution.ch>"]
license = "Apache-2.0"
edition = "2024"
readme = "README.md"
description = "A lightweight, human-friendly configuration language parser & code generator"
repository = "https://github.com/a1v0lut10n/colap.git"
homepage = "https://github.com/a1v0lut10n/colap"
keywords = ["configuration", "parser", "code generator", "cola", "configuration language"]
categories = ["config", "command-line-utilities", "development-tools", "parsing", "parser-implementations"]

[dependencies]
rustemo = "0.7.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11.3"
heck = "0.5.0"
handlebars = "6.3.2"
chrono = "0.4"
serde_json = "1.0"

[build-dependencies]
rustemo-compiler = "0.7.1"
